--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -170,11 +170,36 @@
     <Compile Include="Migrations\201604040445246_InitialModel.Designer.cs">
       <DependentUpon>201604040445246_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201604050035427_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201604050035427_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201604050035427_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604050041345_AddMembershipType.cs" />
+    <Compile Include="Migrations\201604050041345_AddMembershipType.Designer.cs">
+      <DependentUpon>201604050041345_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604050143242_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201604050143242_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201604050143242_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604050216273_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201604050216273_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201604050216273_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604050620598_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\201604050620598_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>201604050620598_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201604050621225_SetNameOfMembershipTypes.cs" />
+    <Compile Include="Migrations\201604050621225_SetNameOfMembershipTypes.Designer.cs">
+      <DependentUpon>201604050621225_SetNameOfMembershipTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -256,6 +281,24 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201604040445246_InitialModel.resx">
       <DependentUpon>201604040445246_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604050035427_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201604050035427_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604050041345_AddMembershipType.resx">
+      <DependentUpon>201604050041345_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604050143242_PopulateMembershipTypes.resx">
+      <DependentUpon>201604050143242_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604050216273_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201604050216273_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604050620598_AddNameToMembershipType.resx">
+      <DependentUpon>201604050620598_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201604050621225_SetNameOfMembershipTypes.resx">
+      <DependentUpon>201604050621225_SetNameOfMembershipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
